--- a/src/main/resources/templates/addCategory.html
+++ b/src/main/resources/templates/addCategory.html
@@ -7,6 +7,44 @@
     <title>Title</title>
 </head>
 <body>
+<!-- Nav Bar -->
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <!-- Brand/logo -->
+    <a class="navbar-brand" href="/">MyDealer</a>
+
+    <!-- Links -->
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/addCategory">Add Category</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/AddCar">Add Car</a>
+        </li>
+
+    </ul>
+</nav>
+<!-- End Nav Bar -->
+<div class="container" style="margin-top:30px">
+    <div class="row">
+        <div class="col-sm-12">
+            <form action="#" th:action="@{/process}" th:object="${category}" method="post">
+
+                <input type="hidden" th:field="*{id}"/></br>
+
+                Category Name: <input type="text" th:field="*{categoryName}"/>
+                <span th:if = "${#fields.hasErrors('categoryName')}" th:errors="*{categoryName}"></span></br>
+
+
+                <input type="submit" value="submit"/>
+
+
+            </form>
+        </div>
+    </div>
+</div>
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
