--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,26 @@
     <title>This will be the Home Page</title>
 </head>
 <body>
+<!-- Nav Bar -->
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <!-- Brand/logo -->
+    <a class="navbar-brand" href="/">MyDealer</a>
+
+    <!-- Links -->
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/addCategory">Add Category</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/AddCar">Add Car</a>
+        </li>
+
+    </ul>
+</nav>
+<!-- End Nav Bar -->
 
 Hello!
 
