--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -8,6 +8,25 @@
 </head>
 <body>
 
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <!-- Brand/logo -->
+    <a class="navbar-brand" href="/">MyDealer</a>
+
+    <!-- Links -->
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/addCategory">Add Category</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/AddCar">Add Car</a>
+        </li>
+
+    </ul>
+</nav>
+
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
