updated title on the category html page

--- a/src/main/resources/templates/addCategory.html
+++ b/src/main/resources/templates/addCategory.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Add a Category</title>
 </head>
 <body>
 <!-- Nav Bar -->
@@ -36,7 +36,6 @@
 
                 Category Name: <input type="text" th:field="*{categoryName}"/>
                 <span th:if = "${#fields.hasErrors('categoryName')}" th:errors="*{categoryName}"></span></br>
-
 
                 <input type="submit" value="submit"/>
 
