--- a/src/main/resources/templates/carForm.html
+++ b/src/main/resources/templates/carForm.html
@@ -7,6 +7,45 @@
     <title>Title</title>
 </head>
 <body>
+<!-- Nav Bar -->
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <!-- Brand/logo -->
+    <a class="navbar-brand" href="/">MyDealer</a>
+
+    <!-- Links -->
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/addCategory">Add Category</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/AddCar">Add Car</a>
+        </li>
+
+    </ul>
+</nav>
+<!-- End Nav Bar -->
+
+
+
+<form method="post" action="/processCar" th:object="${car}" enctype="multipart/form-data">
+    Manufacturer: <input type="text" th:field="*{manufacturer}"/><br/>
+    Car Model: <input type="text" th:field="*{carModel}"/><br/>
+    Year: <input type="text" th:field="*{year}"/><br/>
+    MSRP: <input type="text" th:field="*{MSRP}"/><br/>
+    Category: <br/>
+    <!-- need to make a dropdown -->
+
+
+
+
+    <input type="file" name="file"/><br/><br/>
+
+    <input type="submit" value="Submit"/>
+</form>
+
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
