--- a/src/main/resources/templates/mycar.html
+++ b/src/main/resources/templates/mycar.html
@@ -7,6 +7,47 @@
     <title>Title</title>
 </head>
 <body>
+<!-- Nav Bar -->
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <!-- Brand/logo -->
+    <a class="navbar-brand" href="/">MyDealer</a>
+
+    <!-- Links -->
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/addCategory">Add Category</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/AddCar">Add Car</a>
+        </li>
+
+    </ul>
+</nav>
+<!-- End Nav Bar -->
+
+<div class="container" style="margin-top:30px">
+    <div class="row">
+        <div class="col-sm-12">
+
+            Manufacturer: <span th:text="${car.manufacturer}"></span><br/>
+            Car Model: <span th:text="${car.carModel}"></span><br/>
+            Year: <span th:text="${car.year}"></span><br/>
+            MSRP:<span th:text="${car.MSRP}"></span><br/>
+            Picture:
+            <div th:if="${car.picture} != null">
+                <img th:src="${car.picture}" alt="this is a head shot"/>
+                <hr/>
+            </div>
+
+            <a th:href="@{/delete/car/{id}(id=${car.id})}">Delete this Car</a>
+            <a th:href="@{/update/car/{id}(id=${car.id})}">Update this Car</a>
+
+        </div>
+    </div>
+</div>
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
