--- a/src/main/resources/templates/mycar.html
+++ b/src/main/resources/templates/mycar.html
@@ -38,7 +38,7 @@
             MSRP:<span th:text="${car.MSRP}"></span><br/>
             Picture:
             <div th:if="${car.picture} != null">
-                <img th:src="${car.picture}" alt="this is a head shot"/>
+                <img th:src="${car.picture}" alt="This is a car"/>
                 <hr/>
             </div>
 
