--- a/src/main/resources/templates/mycar.html
+++ b/src/main/resources/templates/mycar.html
@@ -42,8 +42,8 @@
                 <hr/>
             </div>
 
-            <a th:href="@{/delete/car/{id}(id=${car.id})}">Delete this Car</a>
-            <a th:href="@{/update/car/{id}(id=${car.id})}">Update this Car</a>
+            <a th:href="@{/delete/car/{id}(id=${car.id})}"><button type="button" class="btn btn-primary">Delete car</button></a>
+            <a th:href="@{/update/car/{id}(id=${car.id})}"><button type="button" class="btn btn-primary">Update car</button></a>
 
         </div>
     </div>
