--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,13 +35,19 @@
 <!-- End Nav Bar -->
 
 <div class="col-md-5 p-lg-5 mx-auto my-5">
-    <h1 class="display-4 font-weight-normal">Punny headline</h1>
-    <p class="lead font-weight-normal">And an even wittier subheading to boot. Jumpstart your marketing efforts with this example based on Apple’s marketing pages.</p>
-    <a class="btn btn-outline-secondary" href="#">Coming soon</a>
+    <h1 class="display-4 font-weight-normal">Welcome to my MyDealer </h1>
+    <p class="lead font-weight-normal">Buy brand new and used cars </p>
 </div>
 </br>
+<nav>
+<ul class="nav">
+    <li class="nav-item" th:each="cat:${category}" >
+        <a class="nav-link" href="#"><h8 th:text="${cat.categoryName}"></h8></a>
+    </li>
 
 
+</ul>
+</nav>
 
 <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden"th:each="car : ${cars}">
     <div class="my-3 py-3">
@@ -54,11 +60,11 @@
         <hr/>
     </div>
     </div>
-    <a th:href="@{/detail/car/{id}(id=${car.id})}"><button >More info</button></a>
+    <a th:href="@{/detail/car/{id}(id=${car.id})}"><button type="button" class="btn btn-primary">More Info</button></a>
 </div>
 
 
-</div>
+
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
